--- a/weStart.ipynb
+++ b/weStart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6f3a5476-beeb-4a48-8f6b-eee3c5534fc5",
    "metadata": {},
    "outputs": [
@@ -33,10 +33,40 @@
       "[notice] A new release of pip is available: 25.2 -> 25.3\n",
       "[notice] To update, run: C:\\Users\\jonas\\AppData\\Local\\Programs\\Python\\Python313\\python.exe -m pip install --upgrade pip\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ollama in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (0.6.0)\n",
+      "Requirement already satisfied: httpx>=0.27 in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from ollama) (0.28.1)\n",
+      "Requirement already satisfied: pydantic>=2.9 in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from ollama) (2.12.3)\n",
+      "Requirement already satisfied: anyio in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from httpx>=0.27->ollama) (4.11.0)\n",
+      "Requirement already satisfied: certifi in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from httpx>=0.27->ollama) (2025.10.5)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from httpx>=0.27->ollama) (1.0.9)\n",
+      "Requirement already satisfied: idna in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from httpx>=0.27->ollama) (3.11)\n",
+      "Requirement already satisfied: h11>=0.16 in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from httpcore==1.*->httpx>=0.27->ollama) (0.16.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pydantic>=2.9->ollama) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.41.4 in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pydantic>=2.9->ollama) (2.41.4)\n",
+      "Requirement already satisfied: typing-extensions>=4.14.1 in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pydantic>=2.9->ollama) (4.15.0)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.2 in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pydantic>=2.9->ollama) (0.4.2)\n",
+      "Requirement already satisfied: sniffio>=1.1 in c:\\users\\jonas\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from anyio->httpx>=0.27->ollama) (1.3.1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: C:\\Users\\jonas\\AppData\\Local\\Programs\\Python\\Python313\\python.exe -m pip install --upgrade pip\n"
+     ]
     }
    ],
    "source": [
-    "!pip install ollama"
+    "!pip install ollama\n",
+    "!pip install selenium\n",
+    "!pip install requests"
    ]
   },
   {
